Try making font a bit bigger to avoid random zooms on mobile browser

--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
 main {
+    font-size: 1.2em;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
